--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <header class="header">
        <div class="container">
-            <img src="/images/logo.svg">
+            <img src="./images/logo.svg">
             <a href="#">Features</a>
             <a href="#">Team</a>
             <a href="#">Sign In</a>
@@ -21,7 +21,7 @@
    <section class="hero">
        <div class="container">
             <div class="feature-image">
-                <img src="/images/illustration-intro.png" alt="">
+                <img src="./images/illustration-intro.png" alt="">
            </div>
            <h1>All your files in one secure location, accessible anywhere.</h1>
            <p>Fylo stores all your most important files in one secure location. Access them wherever 
@@ -35,7 +35,7 @@
        <div class="container--small feature-grid">
             <div class="feature">
                 <div class="feature-image">
-                    <img src="/images/icon-access-anywhere.svg" srcset="">
+                    <img src="./images/icon-access-anywhere.svg" srcset="">
                 </div>
                 <div class="feature-title">
                         Access your files, anywhere
@@ -47,7 +47,7 @@
             </div>
             <div class="feature">
                 <div class="feature-image">
-                    <img src="/images/icon-security.svg" srcset="">
+                    <img src="./images/icon-security.svg" srcset="">
                 </div>
                 <div class="feature-title">
                     Security you can trust
@@ -59,7 +59,7 @@
             </div>
             <div class="feature">
                 <div class="feature-image">
-                    <img src="/images/icon-collaboration.svg" srcset="">
+                    <img src="./images/icon-collaboration.svg" srcset="">
                 </div>
                 <div class="feature-title">
                     Real-time collaboration
@@ -71,7 +71,7 @@
             </div>
             <div class="feature">
                 <div class="feature-image">
-                    <img src="/images/icon-any-file.svg" srcset="">
+                    <img src="./images/icon-any-file.svg" srcset="">
 
                 </div>
                 <div class="feature-title">
@@ -88,7 +88,7 @@
    <section class="productive">
        <div class="container productive__grid">
             <div class="productive__image">
-                <img src="/images/illustration-stay-productive.png" alt="" srcset="">
+                <img src="./images/illustration-stay-productive.png" alt="" srcset="">
             </div>
             <div class="productive__text">
                 <h2 class="large">Stay productive, wherever you are</h2>
@@ -114,7 +114,7 @@
             </div>
             <div class="quote__author">
                 <div class="quote__author-image">
-                    <img src="/images/profile-1.jpg" alt="Satish Patel" srcset="">
+                    <img src="./images/profile-1.jpg" alt="Satish Patel" srcset="">
                 </div>
                 <div class="quote__author-name">Satish Patel</div>
                 <div class="quote__author-title">Founder & CEO, Huddle</div>
@@ -127,7 +127,7 @@
             </div>
             <div class="quote__author">
                 <div class="quote__author-image">
-                    <img src="/images/profile-2.jpg" alt="Satish Patel" srcset="">
+                    <img src="./images/profile-2.jpg" alt="Satish Patel" srcset="">
                 </div>
                 <div class="quote__author-name">Bruce McKenzie</div>
                 <div class="quote__author-title">Founder & CEO, Huddle</div>
@@ -140,7 +140,7 @@
             </div>
             <div class="quote__author">
                 <div class="quote__author-image">
-                    <img src="/images/profile-3.jpg" alt="Satish Patel" srcset="">
+                    <img src="./images/profile-3.jpg" alt="Satish Patel" srcset="">
                 </div>
                 <div class="quote__author-name"> Iva Boyd</div>
                 <div class="quote__author-title">Founder & CEO, Huddle</div>
@@ -167,7 +167,7 @@
    <footer class="footer">
        <div class="container">
         <div class="footer__logo">
-            <img src="/images/logo.svg" alt="fylo logo" srcset="">
+            <img src="./images/logo.svg" alt="fylo logo" srcset="">
         </div>
         <div class="footer__address">
             <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M6.188 0C2.74 0 0 2.79 0 6.3 0 10.98 6.188 18 6.188 18s6.187-7.02 6.187-11.7c0-3.51-2.74-6.3-6.188-6.3zm0 8.55c-1.238 0-2.21-.99-2.21-2.25s.972-2.25 2.21-2.25c1.237 0 2.21.99 2.21 2.25s-.973 2.25-2.21 2.25z" fill="#FFF" fill-rule="evenodd"/></svg>
